Show a chart and returns with fake data

--- a/lib/returner_web/templates/layout/app.html.eex
+++ b/lib/returner_web/templates/layout/app.html.eex
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Returner · Phoenix Framework</title>
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
+    <script src="https://code.highcharts.com/highcharts.src.js"></script>
+    <script src="<%= Routes.static_path(@conn, "/js/chartkick.js") %>"></script>
     <%= csrf_meta_tag() %>
   </head>
   <body>
